fix: remove timeline animation on mobile and tablet

--- a/src/components/WorkItemDot/styles.module.scss
+++ b/src/components/WorkItemDot/styles.module.scss
@@ -11,4 +11,8 @@
   height: auto;
   transform: translate(-50%, -50%);
   z-index: 20;
+
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
