--- a/src/components/WorkTimeline/styles.module.scss
+++ b/src/components/WorkTimeline/styles.module.scss
@@ -12,4 +12,8 @@
   transform: translateX(-50%);
   pointer-events: none;
   z-index: 10;
+
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
